--- a/index.html
+++ b/index.html
@@ -1,56 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projects</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Astat de Glebantiy - Проекты</title>
+    <style>
+        body {
+            background-color: #121212;
+            color: #FFA500;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+        }
+        .avatar {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 3px solid #FFA500;
+        }
+        h1 {
+            font-size: 2em;
+        }
+        .project {
+            background-color: #1E1E1E;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(255, 165, 0, 0.5);
+        }
+        .project a {
+            color: #FFA500;
+            text-decoration: none;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-  <header>
     <div class="container">
-      <div class="logo">
-        <!-- Замените "avatar.jpg" на файл вашей аватарки -->
-        <img src="avatar.png" alt="Astat de Glebantiy">
-      </div>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="active">Projects</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-      </nav>
+        <img src="avatar.png" alt="Аватар" class="avatar">
+        <h1>Astat de Glebantiy</h1>
+        <h2>Мои проекты</h2>
+        <div id="projects"></div>
     </div>
-  </header>
-
-  <main>
-    <section class="search-section">
-      <input type="text" id="searchInput" placeholder="Search projects..." onkeyup="filterProjects()">
-    </section>
-    <section class="projects-list">
-      <!-- Каждый проект имеет data-атрибут для поиска -->
-      <div class="project-card" data-title="Project Alpha">
-        <h2>Project Alpha</h2>
-        <p>A brief description of Project Alpha.</p>
-        <a href="project-alpha.html">Read More</a>
-      </div>
-      <div class="project-card" data-title="Project Beta">
-        <h2>Project Beta</h2>
-        <p>A brief description of Project Beta.</p>
-        <a href="project-beta.html">Read More</a>
-      </div>
-      <div class="project-card" data-title="Project Gamma">
-        <h2>Project Gamma</h2>
-        <p>A brief description of Project Gamma.</p>
-        <a href="project-gamma.html">Read More</a>
-      </div>
-      <!-- Добавьте дополнительные проекты по необходимости -->
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Your Name</p>
-  </footer>
-
-  <script src="script.js"></script>
+    
+    <script>
+        const projects = [
+            { name: "Проект 1", description: "Описание проекта 1", repo: "https://github.com/user/project1" },
+            { name: "Проект 2", description: "Описание проекта 2", repo: "https://github.com/user/project2" }
+        ];
+        
+        const projectsContainer = document.getElementById("projects");
+        projects.forEach(project => {
+            const projectElement = document.createElement("div");
+            projectElement.classList.add("project");
+            projectElement.innerHTML = `
+                <h3>${project.name}</h3>
+                <p>${project.description}</p>
+                <a href="${project.repo}" target="_blank">Репозиторий</a>
+            `;
+            projectsContainer.appendChild(projectElement);
+        });
+    </script>
 </body>
 </html>
