--- a/project1.html
+++ b/project1.html
@@ -12,6 +12,11 @@
         <h1>Project Name</h1>
     </header>
     <main>
+        <!-- Optional images section. If there are images, uncomment or add them below. -->
+        <div class="project-images">
+            <!-- <img src="image1.jpg" alt="Project Image 1"> -->
+            <!-- <img src="image2.jpg" alt="Project Image 2"> -->
+        </div>
         <p>Detailed description of the project goes here.</p>
         <a href="https://github.com/yourrepo/project" class="btn" target="_blank">GitHub Repo</a>
     </main>
