--- a/index.html
+++ b/index.html
@@ -1,34 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astat de Glebantiy - Projects</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <img src="avatar.png" alt="Astat de Glebantiy" class="avatar">
-        <h1>Astat de Glebantiy</h1>
-    </header>
-    <main>
-        <section class="projects">
-            <h2>My Projects</h2>
-            <div class="project">
-                <h3>Project Name</h3>
-                <p>Description of the project goes here.</p>
-                <a href="project1.html" class="btn">View Project</a>
-                <a href="https://github.com/yourrepo/project1" class="btn" target="_blank">GitHub Repo</a>
-            </div>
-            <div class="project">
-                <h3>Another Project</h3>
-                <p>Short description of another project.</p>
-                <a href="project2.html" class="btn">View Project</a>
-                <a href="https://github.com/yourrepo/project2" class="btn" target="_blank">GitHub Repo</a>
-            </div>
-        </section>
-    </main>
-    {% include footer.html %}
-</body>
-</html>
+---
+layout: default
+title: Astat's Projects
+---
+
+<main>
+    <section class="projects">
+        <h2>My Projects</h2>
+        <div class="project">
+            <h3>Project Name</h3>
+            <p>Description of the project goes here.</p>
+            <a href="project1.html" class="btn">View Project</a>
+            <a href="https://github.com/yourrepo/project1" class="btn" target="_blank">GitHub Repo</a>
+        </div>
+        <div class="project">
+            <h3>Another Project</h3>
+            <p>Short description of another project.</p>
+            <a href="project2.html" class="btn">View Project</a>
+            <a href="https://github.com/yourrepo/project2" class="btn" target="_blank">GitHub Repo</a>
+        </div>
+    </section>
+</main>
