--- a/project1.html
+++ b/project1.html
@@ -1,24 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Name</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <a href="index.html" class="btn">Back to Projects</a>
-        <h1>Project Name</h1>
-    </header>
-    <main>
-        <!-- Optional images section. If there are images, uncomment or add them below. -->
-        <div class="project-images">
-            <!-- <img src="image1.jpg" alt="Project Image 1"> -->
-            <!-- <img src="image2.jpg" alt="Project Image 2"> -->
-        </div>
-        <p>Detailed description of the project goes here.</p>
-        <a href="https://github.com/yourrepo/project" class="btn" target="_blank">GitHub Repo</a>
-    </main>
-</body>
-</html>
+---
+layout: default
+title: Astat's Projects - Project 1
+---
+<main>
+    <!-- Optional images section. If there are images, uncomment or add them below. -->
+    <div class="project-images">
+        <!-- <img src="image1.jpg" alt="Project Image 1"> -->
+        <!-- <img src="image2.jpg" alt="Project Image 2"> -->
+    </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a href="https://github.com/yourrepo/project" class="btn" target="_blank">GitHub Repo</a>
+</main>
