--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@ title: Astat's Projects
     <section class="projects">
         <h2>My Projects</h2>
         <div class="project">
-            <h3>Project Name</h3>
-            <p>Description of the project goes here.</p>
-            <a href="project1.html" class="btn">View Project</a>
-            <a href="https://github.com/yourrepo/project1" class="btn" target="_blank">GitHub Repo</a>
+            <h3>Gemini bot in telegram</h3>
+            <p>Multifunctional Gemini API integration in telegram</p>
+            <a href="gemini-tg.html" class="btn">View Project</a>
+            <!-- <a href="https://github.com/yourrepo/project1" class="btn" target="_blank">GitHub Repo</a> -->
         </div>
         <div class="project">
-            <h3>Another Project</h3>
-            <p>Short description of another project.</p>
-            <a href="project2.html" class="btn">View Project</a>
-            <a href="https://github.com/yourrepo/project2" class="btn" target="_blank">GitHub Repo</a>
+            <h3>Telegram userbot</h3>
+            <p>Bot as a user and performing everyday functions</p>
+            <a href="user-bot-tg.html" class="btn">View Project</a>
+            <!-- <a href="https://github.com/yourrepo/project2" class="btn" target="_blank">GitHub Repo</a> -->
+        <div class="project">
+            <h3>Antiraid bot in telegram</h3>
+            <p>Moderation bot (paused)</p>
+            <a href="antiraid-bot-tg.html" class="btn">View Project</a>
+            <!-- <a href="https://github.com/yourrepo/project2" class="btn" target="_blank">GitHub Repo</a> -->
+        </div>
+        <div class="project">
+            <h3>Mathematical code</h3>
+            <p>Various codes for solving interesting mathematical problems</p>
+            <a href="math-code.html" class="btn">View Project</a>
+            <!-- <a href="https://github.com/yourrepo/project2" class="btn" target="_blank">GitHub Repo</a> -->
         </div>
     </section>
 </main>
