--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ title: Astat's Projects
             <p>Bot as a user and performing everyday functions</p>
             <a href="user-bot-tg.html" class="btn">View Project</a>
             <!-- <a href="https://github.com/yourrepo/project2" class="btn" target="_blank">GitHub Repo</a> -->
+        </div>
         <div class="project">
             <h3>Antiraid bot in telegram</h3>
             <p>Moderation bot (paused)</p>
