--- a/gemini-tg.html
+++ b/gemini-tg.html
@@ -28,9 +28,10 @@ title: Astat's Projects - Gemini bot in telegram
         <p>Sets a system prompt (like an instruction for a bot), and works only after a reset.</p>
         <hr class="small-hr">
         <h4>Set Gemini API key</h4>
-        <hr>
+        <hr class="small-hr">
         <p>Setting the Gemini API key, this key can be generated <a href="https://aistudio.google.com/apikey">from this link</a>.</p>
     </div>
+    <hr>
     <h5>Version: 0.5.1+ALPHA-pre-release</h5>
     <!-- <a href="https://github.com/yourrepo/project" class="btn" target="_blank">GitHub Repo</a> -->
 </main>
