--- a/gemini-tg.html
+++ b/gemini-tg.html
@@ -11,6 +11,16 @@ title: Astat's Projects - Gemini bot in telegram
     <div class="project-images">
       <img src="gemini-tg-1.png" alt="Gemini example 1">
       <img src="gemini-tg-2.png" alt="Gemini example 2">
+      <section class="gallery">
+          <figure>
+            <img src="gemini-tg-1.png" alt="Gemini example 1">
+            <!-- <figcaption>Image 1 caption</figcaption> -->
+          </figure>
+          <figure>
+            <img src="gemini-tg-2.png" alt="Gemini example 2">
+            <!-- <figcaption>Image 1 caption</figcaption> -->
+          </figure>
+      </section>
     </div>
     <div class="project-description">
         <p>There are settings: language, reset chat, set Gemini model, set first prompt, set null message and set Gemini API key.</p>
