--- a/gemini-tg.html
+++ b/gemini-tg.html
@@ -9,16 +9,15 @@ title: Astat's Projects - Gemini bot in telegram
       <p>Multifunctional Gemini API integration in telegram.</p>
     </div>
     <div class="project-images">
-      <section class="gallery">
-          <figure>
-            <img src="gemini-tg-1.png" alt="Gemini example 1">
-            <!-- <figcaption>Image 1 caption</figcaption> -->
-          </figure>
-          <figure>
-            <img src="gemini-tg-2.png" alt="Gemini example 2">
-            <!-- <figcaption>Image 1 caption</figcaption> -->
-          </figure>
-      </section>
+        <section class="gallery">
+          <img src="gemini-tg-1.png" alt="Gemini example" onclick="openModal(this)">
+          <img src="gemini-tg-2.png" alt="Gemini example" onclick="openModal(this)">
+        </section>
+        <div id="myModal" class="modal" onclick="closeModal()">
+          <span class="close" onclick="closeModal()">&times;</span>
+          <img class="modal-content" id="imgModal">
+          <div id="caption"></div>
+        </div>
     </div>
     <div class="project-description">
         <p>There are settings: language, reset chat, set Gemini model, set first prompt, set null message and set Gemini API key.</p>
@@ -43,3 +42,21 @@ title: Astat's Projects - Gemini bot in telegram
     <h5>Version: 0.5.1+ALPHA-pre-release</h5>
     <!-- <a href="https://github.com/yourrepo/project" class="btn" target="_blank">GitHub Repo</a> -->
 </main>
+
+<script>
+    // Открытие модального окна и замена изображения на полное
+    function openModal(img) {
+      var modal = document.getElementById("myModal");
+      var modalImg = document.getElementById("imgModal");
+      var captionText = document.getElementById("caption");
+      modal.style.display = "block";
+      // Предполагается, что полная версия изображения без суффикса _thumb
+      modalImg.src = img.src.replace('_thumb', '');
+      captionText.innerHTML = img.alt;
+    }
+    // Закрытие модального окна
+    function closeModal() {
+      var modal = document.getElementById("myModal");
+      modal.style.display = "none";
+    }
+  </script>
