--- a/gemini-tg.html
+++ b/gemini-tg.html
@@ -40,4 +40,6 @@ title: Astat's Projects - Gemini bot in telegram
     <hr>
     <h5>Version: 0.5.1+ALPHA-pre-release</h5>
     <!-- <a href="https://github.com/yourrepo/project" class="btn" target="_blank">GitHub Repo</a> -->
+    <hr>
+    <a href="index.html" class="btn">Back to Projects</a>
 </main>
