--- a/math-code.html
+++ b/math-code.html
@@ -5,8 +5,9 @@ title: Astat's Projects - Mathematical code
 
 <main>
     <h1>Mathematical code</h1>
+    <p>Various codes for solving interesting mathematical problems.</p>
+    <hr>
     <div class="project-description">
-      <p>Various codes for solving interesting mathematical problems.</p>
       <h4>Arifmetic progression</h4>
       <p>A program for solving simple problems with arithmetic progression, 3 variants of problems. Let's consider the first one for now:</p>
       <div class="project-images">
@@ -19,11 +20,9 @@ title: Astat's Projects - Mathematical code
           <div id="caption">
         </div>
       </div>
-      <p><q>Find the nth term of the progression</q> This choice finds the progression term using the formula a_{1} + (n-1)*d (I'm too lazy to add LaTeX)</p>
+      <p><q>Find the nth term of the progression</q> This choice finds the progression term using the formula a₁ + (n-1)*d (I'm too lazy to add LaTeX)</p>
+      <hr class="small-hr">
       <p>Now let's look at the second choice:</p>
-      <div class="project-description">
-      <h4>Arifmetic progression</h4>
-      <p>A program for solving simple problems with arithmetic progression, 3 variants of problems. Let's consider the first one for now:</p>
       <div class="project-images">
         <section class="gallery">
           <img src="arifmetic-prog-2.png" alt="Arifmetic progression: second choice" onclick="openModal(this)">
@@ -34,7 +33,7 @@ title: Astat's Projects - Mathematical code
           <div id="caption">
         </div>
       </div>
-      <p></p>
+      <p>second choice description</p>
     </div>
     <hr>
     <a href="https://github.com/yourrepo/project" class="btn" target="_blank">GitHub Repo</a>
