--- a/math-code.html
+++ b/math-code.html
@@ -9,7 +9,9 @@ title: Astat's Projects - Mathematical code
     <hr>
     <div class="project-description">
       <h4>Arifmetic progression</h4>
-      <p>A program for solving simple problems with arithmetic progression, 3 variants of problems. Let's consider the first one for now:</p>
+      <p>A program for solving simple problems with arithmetic progression, 3 variants of problems.</p>
+      <hr class="small-hr">
+      <p>Let's consider the first one for now:</p>
       <div class="project-images">
         <section class="gallery">
           <img src="arifmetic-prog-1.png" alt="Arifmetic progression: first choice" onclick="openModal(this)">
