--- a/math-code.html
+++ b/math-code.html
@@ -35,8 +35,8 @@ title: Astat's Projects - Mathematical code
           <div id="caption">
         </div>
       </div>
-      <p>second choice description</p>
+      <p><q>Find the sum of the first n terms of the progression</q> </p>
+      <hr>
     </div>
-    <hr>
     <a href="https://github.com/yourrepo/project" class="btn" target="_blank">GitHub Repo</a>
 </main>
